# HMI-Project

./: CMakeLists.txt  README.md  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
